[gd_scene load_steps=3 format=1]

[ext_resource path="res://menu/game_menu.gd" type="Script" id=1]
[ext_resource path="res://font/font_20px.fnt" type="BitmapFont" id=2]

[node name="game_menu" type="Panel"]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 230.0
margin/bottom = 150.0
script/script = ExtResource( 1 )

[node name="buttons" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 220.0
margin/bottom = 138.0
alignment = 0

[node name="btnResume" type="Button" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 210.0
margin/bottom = 29.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Resume"
flat = false

[node name="btnRestart" type="Button" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 33.0
margin/right = 210.0
margin/bottom = 62.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Restart"
flat = false

[node name="btnBackToMainMenu" type="Button" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 66.0
margin/right = 210.0
margin/bottom = 95.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back to MainMenu"
flat = false

[node name="btnQuit" type="Button" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 99.0
margin/right = 210.0
margin/bottom = 128.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false

[connection signal="pressed" from="buttons/btnResume" to="." method="_on_btnResume_pressed"]

[connection signal="pressed" from="buttons/btnRestart" to="." method="_on_btnRestart_pressed"]

[connection signal="pressed" from="buttons/btnBackToMainMenu" to="." method="_on_btnBackToMainMenu_pressed"]

[connection signal="pressed" from="buttons/btnQuit" to="." method="_on_btnQuit_pressed"]


